# Graduation-Project

./: .dockerignore  .env.example  .gitignore  Issues.md  README.md  clean.sh  docker-compose.prod.yml  docker-compose.yml  local-docker-compose.yml
Agentic_Workflow/: .env.example  ARCHITECTURE.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  README.md  USAGE_GUIDE.md  config.py  multi-agent.plan.md  pyproject.toml  pytest.ini  requirements.txt  setup.py
Agentic_Workflow/benchmarks/: README.md  __init__.py  dataset.py  pipeline.py  ragas_runner.py  reporting.py  run_benchmark.py  settings.py
Agentic_Workflow/benchmarks/datasets/: automotive_seed.jsonl
Agentic_Workflow/data/: hf_dataset_README.md  sample_obd2_data.json
Agentic_Workflow/data/chroma_db/: chroma.sqlite3
Agentic_Workflow/data/sources/: INGEST_BEST_PRACTICES.md  README.md  brand_sources.yaml
Agentic_Workflow/data/sources_test/: manifest.json
Agentic_Workflow/data/sources_test/dtc/: dtc_sample.json
Agentic_Workflow/data/users/edge_user_force_approve/: history.json  profile.json
Agentic_Workflow/data/users/edge_user_no_openai_key/: history.json
Agentic_Workflow/data/users/edge_user_no_tavily/: history.json  profile.json
Agentic_Workflow/data/users/memory_test_user/: history.json  profile.json
Agentic_Workflow/data/users/test_user_002/: history.json  profile.json
Agentic_Workflow/data/users/user_001/: history.json  profile.json
Agentic_Workflow/docs/: HANDOVER.md
Agentic_Workflow/output/: diagnostic_report_user_001_20251122_181626.txt
Agentic_Workflow/scripts/: ingest_rag_full.py  install_gpu_torch.ps1  prewarm_rag.py  run_workflow_trace.py  upload_hf_dataset.py
Agentic_Workflow/src/: __init__.py  api.py  main.py  router.py
Agentic_Workflow/src/agents/: formatter.py  obd2_observer.py  obd2_writer.py  product_researcher.py  technical_writer.py
Agentic_Workflow/src/graph/: __init__.py  main_graph.py
Agentic_Workflow/src/memory/: __init__.py  user_memory.py
Agentic_Workflow/src/orchestrations/: __init__.py  obd2_orchestration.py  writer_orchestration.py
Agentic_Workflow/src/rag/: __init__.py  bge_m3_embeddings.py  bm25_index.py  deterministic_embeddings.py  fastembed_embeddings.py  hybrid.py  knowledge_base.py  reranker.py  retrieval_trace.py  sentence_transformer_embeddings.py
Agentic_Workflow/src/rag/ingest/: __init__.py  download.py  ingest_policy.py  manual_chunking.py  parsers.py  preflight.py  runner.py
Agentic_Workflow/src/rag/sources/: __init__.py  base.py  bmw.py  catalog_adapter.py  ford.py  gm.py  honda.py  hyundai.py  kia.py  mercedes.py  nissan.py  official_registry.py  toyota.py
Agentic_Workflow/src/states/: __init__.py  obd2_state.py  writer_state.py
Agentic_Workflow/src/tools/: __init__.py  memory_tools.py  obd2_parser.py  rag_tool.py  tavily_tool.py
Agentic_Workflow/tests/: conftest.py  fake_embeddings.py  test_benchmark_smoke.py  test_dtc_pdf_parser.py  test_hybrid_retrieval.py  test_ingest_cli.py  test_ingest_download.py  test_ingest_integration.py  test_ingest_live.py  test_ingest_parsers.py  test_ingest_preflight.py  test_keys.py  test_knowledge_base.py  test_manual_chunking.py  test_product_url_filter.py  test_rag_tool_filters.py  test_workflow.py  test_workflow_rag.py
Agentic_Workflow/tests/fixtures/: brand_sources_minimal.yaml  generate_manual_sample.py  manifest_schema.json
IoT/Mechanic/components/ethernet_qemu/: CMakeLists.txt  ethernet_qemu.c
IoT/Mechanic/components/local_mqtt/: CMakeLists.txt  Kconfig  local_mqtt.c
IoT/Mechanic/components/network/: CMakeLists.txt  local_mqtt.c  network_events.c  network_events.h  wifi_manager.c  wifi_store.c  wifi_store.h
IoT/Mechanic/components/network_wrapper/: CMakeLists.txt  Kconfig  network_wrapper.c
IoT/Mechanic/components/web_ui/: CMakeLists.txt  index.html  web_server.c  web_server.h
IoT/Mechanic/components/wifi_manager/: CMakeLists.txt  Kconfig  wifi_manager.c  wifi_store.c
IoT/Mechanic/components/wifi_manager/include/: wifi_store.h  (+1 more)
IoT/Mechanic/main/: CMakeLists.txt  canmodule.c  dtc_reporter.c  idf_component.yml  local_mqtt.c  main.c  mqtt.c  mqtt.h  web_server.c
IoT/Mechanic/main/test/: CMakeLists.txt  test_main.c
IoT/Mechanic/tests/: CMakeLists.txt  test_canmodule.c  test_toyota_prius_2010_pt.c
IoT/Mechanic/tests/stubs/: esp_err.h
IoT/Mechanic/unit_tests/: CMakeLists.txt  test_canmodule.c  test_dtc_reporter.c  test_local_mqtt.c  test_wifi_manager.c  test_wifi_store.c
IoT/Mechanic/unit_tests/stubs/: esp_err.h  esp_event.h  esp_event_stubs.c  esp_event_stubs.h  esp_isotp.h  esp_isotp_stubs.c  esp_isotp_stubs.h  esp_log.h  esp_random.h  esp_random_stubs.c  esp_random_stubs.h  esp_rom_sys.h  esp_timer.h  esp_timer_stubs.c  esp_timer_stubs.h  esp_twai.h  esp_twai_onchip.h  esp_twai_stubs.c  esp_twai_stubs.h  esp_twai_types.h  esp_wifi.h  esp_wifi_stubs.c  esp_wifi_stubs.h  event_groups_stubs.c  event_groups_stubs.h  gpio_stubs.c  gpio_stubs.h  local_mqtt.h  local_mqtt_stubs.c  local_mqtt_stubs.h  mqtt_client.h  mqtt_client_stubs.c  nvs.h  nvs_stubs.c  nvs_stubs.h  sdkconfig.h  wifi_manager.h  wifi_manager_stubs.c
backend/: .dockerignore  .env.example  DockerFile  README.md  docker-compose.yml  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt
backend/app/core/: config.py  deps.py  mqtt.py  security.py  sse.py
backend/app/db/: init_db.py  schema.sql  session.py
backend/app/routers/: auth.py  chat.py  diagnostic.py  internal.py  maintenance.py  vehicle.py
backend/app/schemas/: auth.py  diagnostic.py  maintenance.py  vehicle.py
backend/app/services/: diagnostic.py  llm.py  notify.py
backend/src/: app.js
backend/src/config/: db.js  env.js  mailer.js  mqtt.js  webpush.js
backend/src/db/: index.js  schema.sql
backend/src/middleware/: auth.js  errorHandler.js
backend/src/mqtt/: subscriber.js
backend/src/routes/: auth.routes.js  chat.routes.js  diagnostic.routes.js  internal.routes.js  vehicle.routes.js
backend/src/services/: diagnostic.service.js  llm.service.js  notify.service.js
backend/tests/: conftest.py  test_auth.py  test_diagnostic.py
(+107 files in other folders)
