[project]
name = "agentic-workflow"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.0",
    "datasets>=4.0.0",
    "fastapi==0.136.1",
    "fastembed>=0.6.0",
    "FlagEmbedding>=1.2.0",
    "httpx>=0.28.0",
    "huggingface_hub>=0.26.0",
    "jsonschema>=4.20.0",
    "langchain==1.2.18",
    "langchain-chroma==1.1.0",
    "langchain-community>=0.3.0",
    "langchain-core==1.3.3",
    "langchain-huggingface==1.2.2",
    "langchain-openai==1.2.1",
    "langchain-text-splitters==1.1.2",
    "langgraph==1.1.10",
    "nest-asyncio>=1.6.0",
    "openai==2.36.0",
    "pandas>=2.2.0",
    "pydantic==2.13.4",
    "pypdf>=5.0.0",
    "python-dotenv==1.2.2",
    "pytest>=8.0.0",
    "pytest-mock>=3.12.0",
    "pyyaml>=6.0.0",
    "ragas==0.4.3",
    "rank-bm25>=0.2.2",
    "sentence-transformers==5.4.1",
    "tavily-python==0.7.24",
    "tiktoken==0.12.0",
    "uvicorn[standard]==0.46.0",
]
