[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosmtplib==3.0.1",
    "asyncpg==0.29.0",
    "bcrypt==4.1.2",
    "email-validator==2.1.0.post1",
    "fastapi==0.109.0",
    "gmqtt==0.6.12",
    "httpx==0.26.0",
    "passlib[bcrypt]==1.7.4",
    "pydantic==2.5.3",
    "pydantic-settings==2.1.0",
    "python-dotenv==1.0.0",
    "python-jose[cryptography]==3.3.0",
    "python-multipart==0.0.6",
    "sqlalchemy==2.0.25",
    "sse-starlette==1.8.2",
    "uvicorn[standard]==0.27.0",
]
