idf_component_register(
    SRCS 
        "web_server.c"
    EMBED_TXTFILES 
        "index.html"
    INCLUDE_DIRS
        "."
    REQUIRES
        "wifi_manager"
        "network_wrapper"
        "local_mqtt"
    PRIV_REQUIRES 
        "esp_http_server"
        "esp_wifi"
        "espressif__cjson"
)